crates/quarto-core/tests/integration/snapshots/integration__title_block_pipeline__title_block_banner_image_style.snap
---
source: crates/quarto-core/tests/integration/title_block_pipeline.rs
expression: extract_banner_style(&html)
---
<style>
.quarto-title-block .quarto-title-banner {
background-image: url(banner.png);
background-size: cover;
}
</style>
