crates/quarto-core/tests/integration/snapshots/integration__title_block_pipeline__title_block_banner_true.snap
---
source: crates/quarto-core/tests/integration/title_block_pipeline.rs
assertion_line: 262
expression: extract_title_block(&html)
---
<header id="title-block-header" class="quarto-title-block default">
<div class="quarto-title">
<h1 class="title">Banner Document</h1>
<p class="subtitle lead">With a banner</p>
</div>
<div class="quarto-title-meta">
<div>
<div class="quarto-title-meta-heading">Author</div>
<div class="quarto-title-meta-contents">
<p>Norah Jones</p>
</div>
</div>
<div>
<div class="quarto-title-meta-heading">Published</div>
<div class="quarto-title-meta-contents">
<p class="date">2026-07-01</p>
</div>
</div>
</div>

</header>
