crates/quarto-core/tests/integration/snapshots/integration__title_block_pipeline__title_block_banner_true_main_tag.snap
---
source: crates/quarto-core/tests/integration/title_block_pipeline.rs
assertion_line: 263
expression: extract_main_open_tag(&html)
---
<main class="content" id="quarto-document-content">
