crates/quarto-core/tests/integration/snapshots/integration__title_block_pipeline__title_block_label_overrides.snap
---
source: crates/quarto-core/tests/integration/title_block_pipeline.rs
assertion_line: 272
expression: extract_title_block(&html)
---
<header id="title-block-header" class="quarto-title-block default">
<div class="quarto-title">
<h1 class="title">Label Overrides</h1>
</div>
<div class="quarto-title-meta">
<div>
<div class="quarto-title-meta-heading">Written by</div>
<div class="quarto-title-meta-contents">
<p>Norah Jones</p>
</div>
</div>
<div>
<div class="quarto-title-meta-heading">Posted</div>
<div class="quarto-title-meta-contents">
<p class="date">2026-07-01</p>
</div>
</div>
</div>
<div>
<div class="abstract">
<div class="block-title">Summary</div>
<p>A short abstract.</p>
</div>
</div>

</header>
