crates/quarto-core/tests/integration/snapshots/integration__title_block_pipeline__title_block_metadata_grid_no_categories.snap
---
source: crates/quarto-core/tests/integration/title_block_pipeline.rs
expression: extract_title_block(&html)
---
<header id="title-block-header" class="quarto-title-block default">
<div class="quarto-title">
<h1 class="title">Categories Disabled</h1>
</div>
<div class="quarto-title-meta">
<div>
<div class="quarto-title-meta-heading">Author</div>
<div class="quarto-title-meta-contents">
<p>Norah Jones</p>
</div>
</div>
</div>

</header>
