crates/quarto-core/tests/integration/snapshots/integration__title_block_pipeline__title_block_style_none.snap
---
source: crates/quarto-core/tests/integration/title_block_pipeline.rs
assertion_line: 284
expression: extract_title_block(&html)
---
<header id="title-block-header" class="quarto-title-block default">
<div class="quarto-title">
<h1 class="title">No Title Block</h1>
</div>
<div class="quarto-title-meta">
<div class="quarto-title-meta-author">
<div class="quarto-title-meta-heading">Author</div>
<div class="quarto-title-meta-contents">Norah Jones</div>
</div>
</div>
</header>
